Revision history for AstroScript

2019-06-18 - script ephemeris.pl replaced with planpos.pl.
             floating point error in tests fixed.
             Helpers module moved from 'lib' to 'script'
2019-06-20 - floating point error in test fixed

2019-08-10 - module for calculating rise, set and transit events with example
             script.
2020-12-20 - ability to use decimal lat/lon input

2020-12-21 - Lunar phases module and script

2020-12-26 - Solstices and Equinoxes 
             Aparent position of the Sun
2020-12-31 - Apparent positions of the objects, Planet interface changed
             Numerous bugfixes